force-app/main/default/objects/Assessment__c/fields/Available_Market_Share__c.field-meta.xml
<CustomField>
    <fullName>Available_Market_Share__c</fullName>
    <description>CC BWRD Available Market Share Manual</description>
    <label>Available Market Share</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(1) 5% or less</fullName>
            </value>
            <value>
                <fullName>(2) 5%-10%</fullName>
            </value>
            <value>
                <fullName>(3) 25%-50%</fullName>
            </value>
            <value>
                <fullName>(4) 10%-25%</fullName>
            </value>
            <value>
                <fullName>(5) 50% or more</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>