force-app/main/default/objects/Assessment__c/fields/Available_Market_Share_Weight__c.field-meta.xml
<CustomField>
    <fullName>Available_Market_Share_Weight__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Available Market Share Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>