force-app/main/default/objects/Assessment__c/fields/Available_Market_Share_Weighted_Score__c.field-meta.xml
<CustomField>
    <fullName>Available_Market_Share_Weighted_Score__c</fullName>
    <description>CC BWRD Available Market Share Weighted Score Auto</description>
    <formula>CASE(  Available_Market_Share__c,
&apos;(1) 5% or less&apos;, 1 * Available_Market_Share_Weight__c,
&apos;(2) 5%-10%&apos;, 2 * Available_Market_Share_Weight__c,
&apos;(3) 25%-50%&apos;, 3 * Available_Market_Share_Weight__c,
&apos;(4) 10%-25%&apos;, 4 * Available_Market_Share_Weight__c,
&apos;(5) 50% or more&apos;, 5 * Available_Market_Share_Weight__c,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Market Share Weighted Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>