force-app/main/default/objects/Assessment__c/fields/Buyer_Weighted_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Weighted_Subtotal__c</fullName>
    <description>CC BWRD Buyer Subtotal Auto</description>
    <formula>Target_Buyer_Weighted_Score__c + Internal_Motivation_Weighted_Score__c 
+ Competitive_Advantage_Weighted_Score__c + Time_to_Value_Weighted_Score__c + Customer_Acquisition_Cost_Weighted_Score__c + Customer_Pain_Point_Weighted_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buyer Weighted Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>