force-app/main/default/objects/Assessment__c/fields/BWRD_User__c.field-meta.xml
<CustomField>
    <fullName>BWRD_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>BWRD CC User who completed Assessment Manual</description>
    <label>BW Ventures User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>