force-app/main/default/objects/Assessment__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>CC BWRD Comments Manual</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Comments</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>