force-app/main/default/objects/Assessment__c/fields/Competition_Weighted_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Competition_Weighted_Subtotal__c</fullName>
    <description>CC BWRD Competition Weighted Subtotal Auto</description>
    <formula>Largest_Competitor_Rev_Weighted_Score__c + Available_Market_Share_Weighted_Score__c + Cost_to_Compete_Weighted_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Competition Weighted Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>