force-app/main/default/objects/Assessment__c/fields/Competitive_Advantage__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Advantage__c</fullName>
    <description>CC BWRD Competitive Advantage Manual</description>
    <inlineHelpText>Does this product have a unique method, approach, information, network or technology that makes it unique in the marketplace? The best products make competition increasingly difficult over time.</inlineHelpText>
    <label>Competitive Advantage for Buyer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(1) Low Advantage</fullName>
            </value>
            <value>
                <fullName>(2) Somewhat Low Advantage</fullName>
            </value>
            <value>
                <fullName>(3) Medium Advantage</fullName>
            </value>
            <value>
                <fullName>(4) Somewhat High Advantage</fullName>
            </value>
            <value>
                <fullName>(5) High Advantage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>