force-app/main/default/objects/Assessment__c/fields/Competitive_Advantage_Weight__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Advantage_Weight__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Competitive Advantage for Buyer Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>