force-app/main/default/objects/Assessment__c/fields/Competitive_Advantage_Weighted_Score__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Advantage_Weighted_Score__c</fullName>
    <description>CC BWRD Competitive Advantage Weighted Score Auto</description>
    <formula>CASE( Competitive_Advantage__c,
&apos;(1) Low Advantage&apos;, 1 * Competitive_Advantage_Weight__c,
&apos;(2) Somewhat Low Advantage&apos;, 2 * Competitive_Advantage_Weight__c,
&apos;(3) Medium Advantage&apos;, 3 * Competitive_Advantage_Weight__c,
&apos;(4) Somewhat High Advantage&apos;, 4 * Competitive_Advantage_Weight__c,
&apos;(5) High Advantage&apos;, 5 * Competitive_Advantage_Weight__c,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Competitive Adv for Buyer Weighted Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>