force-app/main/default/objects/Assessment__c/fields/Cost_to_Compete__c.field-meta.xml
<CustomField>
    <fullName>Cost_to_Compete__c</fullName>
    <description>CC BWRD Cost to Compete Manual</description>
    <inlineHelpText>What is the amount of effort in scale and people power necessary to compete (in terms of product development, marketing, and sales) in a market segment?</inlineHelpText>
    <label>Cost to Compete</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(1) $2M+</fullName>
            </value>
            <value>
                <fullName>(2) $1M-$2M</fullName>
            </value>
            <value>
                <fullName>(3) $500K-$1M</fullName>
            </value>
            <value>
                <fullName>(4) $250K-500K</fullName>
            </value>
            <value>
                <fullName>(5) &lt;$250K</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>