force-app/main/default/objects/Assessment__c/fields/Cost_to_Compete_Weighted_Score__c.field-meta.xml
<CustomField>
    <fullName>Cost_to_Compete_Weighted_Score__c</fullName>
    <description>CC BWRD Cost to Compete Weighted Score Auto</description>
    <formula>CASE(  Cost_to_Compete__c ,
&apos;(1) $2M+&apos;, 1 * Cost_to_Compete_Weight__c,
&apos;(2) $1M-$2M&apos;, 2 * Cost_to_Compete_Weight__c,
&apos;(3) $500K-$1M&apos;, 3 * Cost_to_Compete_Weight__c,
&apos;(4) $250K-500K&apos;, 4 * Cost_to_Compete_Weight__c,
&apos;(5) &lt;$250K&apos;, 5 * Cost_to_Compete_Weight__c,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost to Compete Weighted Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>