force-app/main/default/objects/Assessment__c/fields/Cost_to_Develop_Weight__c.field-meta.xml
<CustomField>
    <fullName>Cost_to_Develop_Weight__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Cost to Develop Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>