force-app/main/default/objects/Assessment__c/fields/Customer_Acquisition_Cost__c.field-meta.xml
<CustomField>
    <fullName>Customer_Acquisition_Cost__c</fullName>
    <description>CC BWRD Customer Acquisition Cost Auto</description>
    <inlineHelpText>What is the fully loaded cost to acquire a new customer? Inclusive of sales, marketing, travel, overhead, etc.</inlineHelpText>
    <label>Customer Acquisition Cost</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(1) High Cost</fullName>
            </value>
            <value>
                <fullName>(2) Somewhat High Cost</fullName>
            </value>
            <value>
                <fullName>(3) Medium Cost</fullName>
            </value>
            <value>
                <fullName>(4) Somewhat Low Cost</fullName>
            </value>
            <value>
                <fullName>(5) Low Cost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>