force-app/main/default/objects/Assessment__c/fields/Customer_Acquisition_Cost_Weighted_Score__c.field-meta.xml
<CustomField>
    <fullName>Customer_Acquisition_Cost_Weighted_Score__c</fullName>
    <description>CC BWRD  Customer Acquisition Cost Weighted Score Auto</description>
    <formula>CASE( Customer_Acquisition_Cost__c,
&apos;(1) High Cost&apos;, 1 * Customer_Acquisition_Cost_Weight__c,
&apos;(2) Somewhat High Cost&apos;, 2 * Customer_Acquisition_Cost_Weight__c,
&apos;(3) Medium Cost&apos;, 3 * Customer_Acquisition_Cost_Weight__c,
&apos;(4) Somewhat Low Cost&apos;, 4 * Customer_Acquisition_Cost_Weight__c,
&apos;(5) Low Cost&apos;, 5 * Customer_Acquisition_Cost_Weight__c,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Acquisition Cost Weighted Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>