force-app/main/default/objects/Assessment__c/fields/Customer_Pain_Point__c.field-meta.xml
<CustomField>
    <fullName>Customer_Pain_Point__c</fullName>
    <description>CC BWRD Customer Pain Point Manual</description>
    <label>Customer Pain Point</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(1) Not Painful</fullName>
            </value>
            <value>
                <fullName>(2) Somewhat Painful</fullName>
            </value>
            <value>
                <fullName>(3) Painful</fullName>
            </value>
            <value>
                <fullName>(4) Really Painful</fullName>
            </value>
            <value>
                <fullName>(1) Less Attractive</fullName>
                <isActive>false</isActive>
                <label>(1) Less Attractive</label>
            </value>
            <value>
                <fullName>(2) Somewhat Less Attractive</fullName>
                <isActive>false</isActive>
                <label>(2) Somewhat Less Attractive</label>
            </value>
            <value>
                <fullName>(3) Attractive</fullName>
                <isActive>false</isActive>
                <label>(3) Attractive</label>
            </value>
            <value>
                <fullName>(4) Somewhat More Attractive</fullName>
                <isActive>false</isActive>
                <label>(4) Somewhat More Attractive</label>
            </value>
            <value>
                <fullName>(5) More Attractive</fullName>
                <isActive>false</isActive>
                <label>(5) More Attractive</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>