force-app/main/default/objects/Assessment__c/fields/Customer_Pain_Point_Weight__c.field-meta.xml
<CustomField>
    <fullName>Customer_Pain_Point_Weight__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Customer Pain Point Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>