force-app/main/default/objects/Assessment__c/fields/Deadline__c.field-meta.xml
<CustomField>
    <fullName>Deadline__c</fullName>
    <description>BN
BWRD Users
To track deadlines for completing assessments
Populated from Idea via process</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Deadline</label>
    <type>Date</type>
</CustomField>