force-app/main/default/objects/Assessment__c/fields/Existing_Code_Base__c.field-meta.xml
<CustomField>
    <fullName>Existing_Code_Base__c</fullName>
    <description>CC BWRD Existing Code Base Manual</description>
    <label>Have we done something similar?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(1) No</fullName>
            </value>
            <value>
                <fullName>(2) Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>