force-app/main/default/objects/Assessment__c/fields/Existing_Code_Base_Weight__c.field-meta.xml
<CustomField>
    <fullName>Existing_Code_Base_Weight__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Have we done something similar? Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>