force-app/main/default/objects/Assessment__c/fields/Existing_Code_Base_Weighted_Score__c.field-meta.xml
<CustomField>
    <fullName>Existing_Code_Base_Weighted_Score__c</fullName>
    <description>CC BWRD Existing Code Base Weighted Score Auto</description>
    <formula>CASE(  Existing_Code_Base__c,
&apos;(1) No&apos;, 1 * Existing_Code_Base_Weight__c,
&apos;(2) Yes&apos;, 2 * Existing_Code_Base_Weight__c,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Done something similar? Weighted Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>