force-app/main/default/objects/Assessment__c/fields/Expected_Sales__c.field-meta.xml
<CustomField>
    <fullName>Expected_Sales__c</fullName>
    <description>CC BWRD Expected Sales Manual</description>
    <label>Expected Sales Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(1) 1 Year+</fullName>
            </value>
            <value>
                <fullName>(3) Months</fullName>
            </value>
            <value>
                <fullName>(4) Weeks</fullName>
            </value>
            <value>
                <fullName>(5) Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>