force-app/main/default/objects/Assessment__c/fields/Expected_Sales_Weight__c.field-meta.xml
<CustomField>
    <fullName>Expected_Sales_Weight__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Expected Sales Cycle Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>