force-app/main/default/objects/Assessment__c/fields/Expected_Sales_Weighted_Score__c.field-meta.xml
<CustomField>
    <fullName>Expected_Sales_Weighted_Score__c</fullName>
    <description>CC BWRD  Expected Sales Weighted Score Automatic</description>
    <formula>CASE(Expected_Sales__c ,
&apos;(1) 1 Year+&apos;, 1* Expected_Sales_Weight__c,
&apos;(3) Months&apos;, 3 * Expected_Sales_Weight__c,
&apos;(4) Weeks&apos;, 4 * Expected_Sales_Weight__c,
&apos;(5) Days&apos;, 5 * Expected_Sales_Weight__c,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Sales Cycle Weighted Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>