force-app/main/default/objects/Assessment__c/fields/Frequency_of_Use__c.field-meta.xml
<CustomField>
    <fullName>Frequency_of_Use__c</fullName>
    <description>CC BWRD Frequency of Use</description>
    <label>Frequency of Use</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(1) Infrequently</fullName>
            </value>
            <value>
                <fullName>(2) Monthly</fullName>
            </value>
            <value>
                <fullName>(3) Weekly</fullName>
            </value>
            <value>
                <fullName>(4) Daily</fullName>
            </value>
            <value>
                <fullName>(5) Many times per day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>