force-app/main/default/objects/Assessment__c/fields/Frequency_of_Use_Weight__c.field-meta.xml
<CustomField>
    <fullName>Frequency_of_Use_Weight__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Frequency of Use Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>