force-app/main/default/objects/Assessment__c/fields/Frequency_of_Use_Weighted_Score__c.field-meta.xml
<CustomField>
    <fullName>Frequency_of_Use_Weighted_Score__c</fullName>
    <description>CC BWRD Frequency of Use Weighted Score Auto</description>
    <formula>CASE(  Frequency_of_Use__c,
&apos;(1) Infrequently&apos;, 1 * Frequency_of_Use_Weight__c,
&apos;(2) Monthly&apos;, 2 * Frequency_of_Use_Weight__c,
&apos;(3) Weekly&apos;, 3 * Frequency_of_Use_Weight__c,
&apos;(4) Daily&apos;, 4 * Frequency_of_Use_Weight__c,
&apos;(5) Many times per day&apos;, 5 * Frequency_of_Use_Weight__c,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Frequency of Use Weighted Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>