force-app/main/default/objects/Assessment__c/fields/Idea__c.field-meta.xml
<CustomField>
    <fullName>Idea__c</fullName>
    <description>BN
BWRD Users
To attach the assessment to an Idea
Populated manually from Idea Eval process</description>
    <label>Idea</label>
    <referenceTo>Idea__c</referenceTo>
    <relationshipLabel>Assessments</relationshipLabel>
    <relationshipName>Assessments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>