force-app/main/default/objects/Assessment__c/fields/Internal_Motivation__c.field-meta.xml
<CustomField>
    <fullName>Internal_Motivation__c</fullName>
    <description>CC BWRD Internal Motivation Manual</description>
    <inlineHelpText>Motivation for the Customer to be better because the customer wants to be better.</inlineHelpText>
    <label>Internal Motivation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(1) Low Motivation</fullName>
            </value>
            <value>
                <fullName>(2) Medium Motivation</fullName>
            </value>
            <value>
                <fullName>(3) High Motivation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>