force-app/main/default/objects/Assessment__c/fields/Internal_Motivation_Weight__c.field-meta.xml
<CustomField>
    <fullName>Internal_Motivation_Weight__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Internal Motivation Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>