force-app/main/default/objects/Assessment__c/fields/Internal_Motivation_Weighted_Score__c.field-meta.xml
<CustomField>
    <fullName>Internal_Motivation_Weighted_Score__c</fullName>
    <description>CC BWRD Internal Motivation Weighted Score Auto</description>
    <formula>CASE( Internal_Motivation__c,
&apos;(1) Low Motivation&apos;, 1 * Internal_Motivation_Weight__c,
&apos;(2) Medium Motivation&apos;, 2 * Internal_Motivation_Weight__c,
&apos;(3) High Motivation&apos;, 3 * Internal_Motivation_Weight__c,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Motivation Weighted Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>