force-app/main/default/objects/Assessment__c/fields/Largest_Competitor_Rev__c.field-meta.xml
<CustomField>
    <fullName>Largest_Competitor_Rev__c</fullName>
    <description>CC BWRD Revenue of Largest Competitor Manual</description>
    <label>Largest Competitor Rev</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(1) $1B+</fullName>
            </value>
            <value>
                <fullName>(2) $500-$1B</fullName>
            </value>
            <value>
                <fullName>(3) $100M-$500M</fullName>
            </value>
            <value>
                <fullName>(4) $50M-$100M</fullName>
            </value>
            <value>
                <fullName>(5) $50M or less</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>