force-app/main/default/objects/Assessment__c/fields/Largest_Competitor_Rev_Weight__c.field-meta.xml
<CustomField>
    <fullName>Largest_Competitor_Rev_Weight__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Largest Competitor Rev Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>