force-app/main/default/objects/Assessment__c/fields/Largest_Competitor_Rev_Weighted_Score__c.field-meta.xml
<CustomField>
    <fullName>Largest_Competitor_Rev_Weighted_Score__c</fullName>
    <description>CC BWRD Largest Competitor Rev Weighted Score Auto</description>
    <formula>CASE(  Largest_Competitor_Rev__c,
&apos;(1) $1B+&apos;, 1 * Largest_Competitor_Rev_Weight__c,
&apos;(2) $500-$1B&apos;, 2 * Largest_Competitor_Rev_Weight__c,
&apos;(3) $100M-$500M&apos;, 3 * Largest_Competitor_Rev_Weight__c,
&apos;(4) $50M-$100M&apos;, 4 * Largest_Competitor_Rev_Weight__c,
&apos;(5) $50M or less&apos;, 5 * Largest_Competitor_Rev_Weight__c,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Largest Competitor Rev Weighted Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>