force-app/main/default/objects/Assessment__c/fields/Market_Weighted_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Market_Weighted_Subtotal__c</fullName>
    <description>CC BWRD Market Weghted Subtotal Auto</description>
    <formula>Percent_of_TAM_for_1M_Weighted_Score__c + Expected_Sales_Weighted_Score__c +  Pricing_Model_Weighted_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Weighted Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>