force-app/main/default/objects/Assessment__c/fields/Percent_of_TAM_for_1M__c.field-meta.xml
<CustomField>
    <fullName>Percent_of_TAM_for_1M__c</fullName>
    <description>CC BWRD Percent of TAM Needed to reach $1M Manual</description>
    <inlineHelpText>Serviceable Available Market is the segment of the TAM targeted by your products and services which is within your geographical reach.</inlineHelpText>
    <label>% of SAM to $1MM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(1) 5%+</fullName>
            </value>
            <value>
                <fullName>(2) 2%-5%</fullName>
            </value>
            <value>
                <fullName>(3) 1%-2%</fullName>
            </value>
            <value>
                <fullName>(4) &lt; .25%</fullName>
            </value>
            <value>
                <fullName>(1) 15+</fullName>
                <isActive>false</isActive>
                <label>(1) 15+</label>
            </value>
            <value>
                <fullName>(2) 10-15</fullName>
                <isActive>false</isActive>
                <label>(2) 10-15</label>
            </value>
            <value>
                <fullName>(3) 5-10</fullName>
                <isActive>false</isActive>
                <label>(3) 5-10</label>
            </value>
            <value>
                <fullName>(4) 0-5</fullName>
                <isActive>false</isActive>
                <label>(4) 0-5</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>