force-app/main/default/objects/Assessment__c/fields/Percent_of_TAM_for_1M_Weight__c.field-meta.xml
<CustomField>
    <fullName>Percent_of_TAM_for_1M_Weight__c</fullName>
    <defaultValue>1</defaultValue>
    <label>% of SAM to $1MM Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>