force-app/main/default/objects/Assessment__c/fields/Percent_of_TAM_for_1M_Weighted_Score__c.field-meta.xml
<CustomField>
    <fullName>Percent_of_TAM_for_1M_Weighted_Score__c</fullName>
    <description>CC BWRD  Percent of TAM for 1M Weighted Score Auto</description>
    <formula>CASE( Percent_of_TAM_for_1M__c,
&apos;(1) 5%+&apos;, 1 * Percent_of_TAM_for_1M_Weight__c,
&apos;(2) 2%-5%&apos;, 2 * Percent_of_TAM_for_1M_Weight__c,
&apos;(3) 1%-2%&apos;, 3 * Percent_of_TAM_for_1M_Weight__c,
&apos;(4) &lt; .25%&apos;, 4 * Percent_of_TAM_for_1M_Weight__c,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% of SAM to $1MM Weighted Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>