force-app/main/default/objects/Assessment__c/fields/Pricing_Model__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Model__c</fullName>
    <description>CC BWRD Pricing Model Manual</description>
    <label>Revenue Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(1) Ad Spent</fullName>
            </value>
            <value>
                <fullName>(2) % of Transaction</fullName>
            </value>
            <value>
                <fullName>(3) Subscription</fullName>
            </value>
            <value>
                <fullName>(1) Annual</fullName>
                <isActive>false</isActive>
                <label>(1) Annual</label>
            </value>
            <value>
                <fullName>(2) Location/Month</fullName>
                <isActive>false</isActive>
                <label>(2) Location/Month</label>
            </value>
            <value>
                <fullName>(3) User/Month</fullName>
                <isActive>false</isActive>
                <label>(3) User/Month</label>
            </value>
            <value>
                <fullName>1 - Annual</fullName>
                <isActive>false</isActive>
                <label>1 - Annual</label>
            </value>
            <value>
                <fullName>2 - Location/Month</fullName>
                <isActive>false</isActive>
                <label>2 - Location/Month</label>
            </value>
            <value>
                <fullName>3 - User/Month</fullName>
                <isActive>false</isActive>
                <label>3 - User/Month</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>