force-app/main/default/objects/Assessment__c/fields/Pricing_Model_Weight__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Model_Weight__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Revenue Model Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>