force-app/main/default/objects/Assessment__c/fields/Pricing_Model_Weighted_Score__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Model_Weighted_Score__c</fullName>
    <description>CC BWRG Pricing Model Weighted Score Automatic</description>
    <formula>CASE(Pricing_Model__c,
&apos;(1) Ad Spent&apos;, 1 * Pricing_Model_Weight__c,
&apos;(2) % of Transaction&apos;, 2 * Pricing_Model_Weight__c,
&apos;(3) Subscription&apos;, 3 * Pricing_Model_Weight__c,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Model Weighted Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>