force-app/main/default/objects/Assessment__c/fields/Product_Weighted_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Product_Weighted_Subtotal__c</fullName>
    <description>CC BWRD Product Weighted Subtotal Auto</description>
    <formula>Frequency_of_Use_Weighted_Score__c + Use_Weighted_Score__c + Existing_Code_Base_Weighted_Score__c + Cost_to_Develop_Weighted_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Weighted Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>