force-app/main/default/objects/Assessment__c/fields/Report_Boolean__c.field-meta.xml
<CustomField>
    <fullName>Report_Boolean__c</fullName>
    <description>BN
BWRD
To filter the assessment report by who is using it
Auto from formula</description>
    <formula>IF(BWRD_User__c = $User.Id , 1 , 0)</formula>
    <label>Report Boolean</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>